[package]

name = "cpython"
version = "0.2.0"
description = "Bindings to Python"
authors = ["Daniel Grunwald <daniel@danielgrunwald.de>"]
readme = "README.md"
keywords = [
    "python",
    "cpython",
    "libpython27",
]
homepage = "https://github.com/dgrunwald/rust-cpython"
repository = "https://github.com/dgrunwald/rust-cpython.git"
documentation = "http://dgrunwald.github.io/rust-cpython/doc/cpython/"
categories = ["api-bindings", "development-tools::ffi"]
license = "MIT"
exclude = [
    "/.gitignore",
    "/.travis.yml",
    "/appveyor.yml",
    "/.cargo/config",
    "/python27-sys/**",
    "/python3-sys/**",
    "/extensions/**"
]
build = "build.rs"

[badges]
travis-ci = { repository = "dgrunwald/rust-cpython" }
appveyor = { repository = "dgrunwald/rust-cpython" }

[dependencies]
libc = "0.2"
num-traits = "0.1"

# These features are both optional, but you must pick one to 
# indicate which python ffi you are trying to bind to.
[dependencies.python27-sys]
optional = true
path = "python27-sys"
version = "0.2.0"

[dependencies.python3-sys]
optional = true
path = "python3-sys"
version = "0.2.0"

[dependencies.python-sys]
path = "python-sys"
version = "0.1.0"

[features]
default = ["python3-sys"]

# Enable additional features that require nightly rust
nightly = []

# Use this feature when building an extension module.
# It tells the linker to keep the python symbols unresolved,
# so that the module can also be used with statically linked python interpreters.
extension-module = [ "python3-sys/extension-module" ]

# Unfortunately we can't use the forward the same feature to either python27-sys
# or python3-sys. (honestly, we should probably merge both crates into 'python-sys')
extension-module-2-7 = [ "python27-sys/extension-module" ]


# Optional features to support explicitly specifying python minor version.
# If you don't care which minor version, just specify python3-sys as a 
# feature.
python-3-6 = ["python3-sys/python-3-6"]
python-3-5 = ["python3-sys/python-3-5"]
python-3-4 = ["python3-sys/python-3-4"]

#pep-384 = ["python3-sys/pep-384"]

# patch through the python-sys build features

build-python-3-6-0 = ["python3-sys/build-python-3-6-0"]
build-python-3-6-1 = ["python3-sys/build-python-3-6-1"]
build-python-3-6-2 = ["python3-sys/build-python-3-6-2"]
build-python-3-6-3 = ["python3-sys/build-python-3-6-3"]
build-python-3-6-4 = ["python3-sys/build-python-3-6-4"]
build-python-3-6-dev = ["python3-sys/build-python-3-6-dev"]

build-python-3-5-dev  = ["python3-sys/build-python-3-5-dev"]
build-python-3-5-0    = ["python3-sys/build-python-3-5-0"]
build-python-3-5-1    = ["python3-sys/build-python-3-5-1"]
build-python-3-5-2    = ["python3-sys/build-python-3-5-2"]
build-python-3-5-3    = ["python3-sys/build-python-3-5-3"]
build-python-3-5-4    = ["python3-sys/build-python-3-5-4"]
build-python-3-5-5    = ["python3-sys/build-python-3-5-5"]
build-python-3-5-5rc1 = ["python3-sys/build-python-3-5-5rc1"]

build-python-3-4-dev = ["python3-sys/build-python-3-4-dev"]
build-python-3-4-0 = ["python3-sys/build-python-3-4-0"]
build-python-3-4-1 = ["python3-sys/build-python-3-4-1"]
build-python-3-4-2 = ["python3-sys/build-python-3-4-2"]
build-python-3-4-3 = ["python3-sys/build-python-3-4-3"]
build-python-3-4-4 = ["python3-sys/build-python-3-4-4"]
build-python-3-4-5 = ["python3-sys/build-python-3-4-5"]
build-python-3-4-6 = ["python3-sys/build-python-3-4-6"]
build-python-3-4-7 = ["python3-sys/build-python-3-4-7"]
build-python-3-4-8 = ["python3-sys/build-python-3-4-8"]

[workspace]
members = ["python-sys", "python27-sys", "python3-sys", "extensions/hello"]

