[package]
name = "python3-sys"
version = "0.2.0"
description = "FFI Declarations for Python 3"
readme = "README.md"
keywords = [
    "python",
    "cpython",
    "libpython3",
]
homepage = "https://github.com/dgrunwald/rust-cpython/tree/master/python3-sys"
repository = "https://github.com/dgrunwald/rust-cpython/tree/master/python3-sys"
categories = ["external-ffi-bindings"]
license = "Python-2.0"
authors = ["Daniel Grunwald <daniel@danielgrunwald.de>"]
links = "python3"
build = "build.rs"
exclude = [
    "/.gitignore",
    "/.travis.yml",
]
workspace = ".."

[dependencies]
libc = "0.2"

[dependencies.python-sys]
path = "../../python-sys"

[build-dependencies]
regex = "0.2"

[features]
# This is examined by ./build.rs to determine which python version 
# to try to bind to.
default = ["python-3"]

# Use this feature when building an extension module.
# It tells the linker to keep the python symbols unresolved,
# so that the module can also be used with statically linked python interpreters.
extension-module = [ ]

# Bind to any python 3.x.
python-3 = []

# Or, bind to a particular minor version.
python-3-4 = []
python-3-5 = []
python-3-6 = []

python-3-6-0 = ["python-sys/python-3-6-0"]
python-3-6-1 = ["python-sys/python-3-6-1"]
python-3-6-2 = ["python-sys/python-3-6-2"]
python-3-6-3 = ["python-sys/python-3-6-3"]
python-3-6-4 = ["python-sys/python-3-6-4"]

python-3-5-dev  = ["python-sys/python-3-5-dev"]
python-3-5-0    = ["python-sys/python-3-5-0"]
python-3-5-1    = ["python-sys/python-3-5-1"]
python-3-5-2    = ["python-sys/python-3-5-2"]
python-3-5-3    = ["python-sys/python-3-5-3"]
python-3-5-4    = ["python-sys/python-3-5-4"]
python-3-5-5    = ["python-sys/python-3-5-5"]
python-3-5-5rc1 = ["python-sys/python-3-5-5rc1"]

python-3-4-dev = ["python-sys/python-3-4-dev"]
python-3-4-0 = ["python-sys/python-3-4-0"]
python-3-4-1 = ["python-sys/python-3-4-1"]
python-3-4-2 = ["python-sys/python-3-4-2"]
python-3-4-3 = ["python-sys/python-3-4-3"]
python-3-4-4 = ["python-sys/python-3-4-4"]
python-3-4-5 = ["python-sys/python-3-4-5"]
python-3-4-6 = ["python-sys/python-3-4-6"]
python-3-4-7 = ["python-sys/python-3-4-7"]
python-3-4-8 = ["python-sys/python-3-4-8"]

# Restrict to PEP-384 stable ABI
pep-384 = []

