[package]
name = "python3-sys"
version = "0.2.0"
description = "FFI Declarations for Python 3"
readme = "README.md"
keywords = [
    "python",
    "cpython",
    "libpython3",
]
homepage = "https://github.com/dgrunwald/rust-cpython/tree/master/python3-sys"
repository = "https://github.com/dgrunwald/rust-cpython/tree/master/python3-sys"
categories = ["external-ffi-bindings"]
license = "Python-2.0"
authors = ["Daniel Grunwald <daniel@danielgrunwald.de>"]
links = "python3"
build = "build.rs"
exclude = [
    "/.gitignore",
    "/.travis.yml",
]
workspace = ".."

[dependencies]
libc = "0.2"

[dependencies.python-sys]
path = "../../python-sys"

[build-dependencies]
regex = "0.2"

[features]
# This is examined by ./build.rs to determine which python version 
# to try to bind to.
default = ["python-3"]

# Use this feature when building an extension module.
# It tells the linker to keep the python symbols unresolved,
# so that the module can also be used with statically linked python interpreters.
extension-module = [ ]

# Bind to any python 3.x.
python-3 = []

# Or, bind to a particular minor version.
python-3-4 = []
python-3-5 = []
python-3-6 = []

# Instead of finding python via PATH, build the version you want:
build-python-3-6-0 = ["python-sys/build-python-3-6-0"]
build-python-3-6-1 = ["python-sys/build-python-3-6-1"]
build-python-3-6-2 = ["python-sys/build-python-3-6-2"]
build-python-3-6-3 = ["python-sys/build-python-3-6-3"]
build-python-3-6-4 = ["python-sys/build-python-3-6-4"]
build-python-3-6-dev = ["python-sys/build-python-3-6-dev"]

build-python-3-5-dev  = ["python-sys/build-python-3-5-dev"]
build-python-3-5-0    = ["python-sys/build-python-3-5-0"]
build-python-3-5-1    = ["python-sys/build-python-3-5-1"]
build-python-3-5-2    = ["python-sys/build-python-3-5-2"]
build-python-3-5-3    = ["python-sys/build-python-3-5-3"]
build-python-3-5-4    = ["python-sys/build-python-3-5-4"]
build-python-3-5-5    = ["python-sys/build-python-3-5-5"]
build-python-3-5-5rc1 = ["python-sys/build-python-3-5-5rc1"]

build-python-3-4-dev = ["python-sys/build-python-3-4-dev"]
build-python-3-4-0 = ["python-sys/build-python-3-4-0"]
build-python-3-4-1 = ["python-sys/build-python-3-4-1"]
build-python-3-4-2 = ["python-sys/build-python-3-4-2"]
build-python-3-4-3 = ["python-sys/build-python-3-4-3"]
build-python-3-4-4 = ["python-sys/build-python-3-4-4"]
build-python-3-4-5 = ["python-sys/build-python-3-4-5"]
build-python-3-4-6 = ["python-sys/build-python-3-4-6"]
build-python-3-4-7 = ["python-sys/build-python-3-4-7"]
build-python-3-4-8 = ["python-sys/build-python-3-4-8"]

# Restrict to PEP-384 stable ABI
pep-384 = []

